--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Dark Knight</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <!-- The entire body must be written by student -->
+    <header>
+        <h2>The Dark Knight</h2>
+    </header>
+    <nav>
+        <a href="#actor" id="nav-actor">Actors</a>
+        <a href="#quote" id="nav-quote">Quotes</a>
+    </nav>
+    <summary>
+        <h3>Summary</h3>
+        <p>With the help of allies Lt. Jim Gordon (Gary Oldman) and DA Harvey Dent (Aaron Eckhart), Batman (Christian Bale) has been able to keep a tight lid on crime in Gotham City. But when a vile young criminal calling himself the Joker (Heath Ledger) suddenly throws the town into chaos, the caped Crusader begins to tread a fine line between heroism and vigilantism.</p>
+    </summary>
+    <section id="actor">
+        <h3>Actors</h3>
+        <ul>
+            <li>Christian Bale as Batman</li>
+            <li>Heath Ledger as Joker</li>
+            <li>Gary Oldman as James "Jim" Gordon</li>
+        </ul>
+    </section>
+    <section id="quote">
+        <h3>Famous Quote</h3>
+        <p>"Why so serious?" (The Joker), "You either die a hero or live long enough to see yourself become the villain."</p>
+    </section>
+    <aside>
+        <p>IMDb Rating: 9.0/10</p>
+        <p>Release Date: 18 July 2008</p>
+    </aside>
+    <footer>
+        <p>Produced by: Christopher Nolan</p>
+    </footer>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
